--- a/HaRepackerLib/HaRepackerLib.csproj
+++ b/HaRepackerLib/HaRepackerLib.csproj
@@ -183,6 +183,12 @@
     <EmbeddedResource Include="Controls\DockableSearchResult.zh-CHT.resx">
       <DependentUpon>DockableSearchResult.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\HaRepackerMainPanels\HaRepackerMainPanel.ja.resx">
+      <DependentUpon>HaRepackerMainPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\HaRepackerMainPanels\HaRepackerMainPanel.ko.resx">
+      <DependentUpon>HaRepackerMainPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\HaRepackerMainPanels\HaRepackerMainPanel.resx">
       <DependentUpon>HaRepackerMainPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -214,6 +220,8 @@
     <EmbeddedResource Include="Controls\TreeViewMS.resx">
       <DependentUpon>TreeViewMS.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.ja.resx" />
+    <EmbeddedResource Include="Properties\Resources.ko.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
