--- a/HaRepackerLib/HaRepackerLib.csproj
+++ b/HaRepackerLib/HaRepackerLib.csproj
@@ -82,6 +82,7 @@
       <HintPath>..\packages\NAudio.1.7.3\lib\net35\NAudio.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -91,9 +92,16 @@
       <HintPath>..\packages\DockPanelSuite.2.10.0\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimationBuilder.cs" />
+    <Compile Include="Controls\BitmapInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\BitmapInputBox.Designer.cs">
+      <DependentUpon>BitmapInputBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ChangableTextbox.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -109,6 +117,12 @@
     <Compile Include="Controls\DoubleInput.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\FloatingPointInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\FloatingPointInputBox.Designer.cs">
+      <DependentUpon>FloatingPointInputBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\HaRepackerMainPanels\HaRepackerMainPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -117,6 +131,24 @@
     </Compile>
     <Compile Include="Controls\IntegerInput.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\IntInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\IntInputBox.Designer.cs">
+      <DependentUpon>IntInputBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\NameInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\NameInputBox.Designer.cs">
+      <DependentUpon>NameInputBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\NameValueInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\NameValueInputBox.Designer.cs">
+      <DependentUpon>NameValueInputBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\ReplaceBox.cs">
       <SubType>Form</SubType>
@@ -130,8 +162,20 @@
     <Compile Include="Controls\SearchOptionsForm.Designer.cs">
       <DependentUpon>SearchOptionsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\SoundInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\SoundInputBox.Designer.cs">
+      <DependentUpon>SoundInputBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\TreeViewMS.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\VectorInputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\VectorInputBox.Designer.cs">
+      <DependentUpon>VectorInputBox.cs</DependentUpon>
     </Compile>
     <Compile Include="SharpApng.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -165,6 +209,16 @@
     <None Include="Resources\Play.png" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\BitmapInputBox.resx">
+      <DependentUpon>BitmapInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\BitmapInputBox.zh-CHS.resx">
+      <DependentUpon>BitmapInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\BitmapInputBox.zh-CHT.resx">
+      <DependentUpon>BitmapInputBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ChangableTextbox.resx">
       <DependentUpon>ChangableTextbox.cs</DependentUpon>
     </EmbeddedResource>
@@ -183,6 +237,16 @@
     <EmbeddedResource Include="Controls\DockableSearchResult.zh-CHT.resx">
       <DependentUpon>DockableSearchResult.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\FloatingPointInputBox.resx">
+      <DependentUpon>FloatingPointInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\FloatingPointInputBox.zh-CHS.resx">
+      <DependentUpon>FloatingPointInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\FloatingPointInputBox.zh-CHT.resx">
+      <DependentUpon>FloatingPointInputBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\HaRepackerMainPanels\HaRepackerMainPanel.ja.resx">
       <DependentUpon>HaRepackerMainPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -199,6 +263,36 @@
     <EmbeddedResource Include="Controls\HaRepackerMainPanels\HaRepackerMainPanel.zh-CHT.resx">
       <DependentUpon>HaRepackerMainPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\IntInputBox.resx">
+      <DependentUpon>IntInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\IntInputBox.zh-CHS.resx">
+      <DependentUpon>IntInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\IntInputBox.zh-CHT.resx">
+      <DependentUpon>IntInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NameInputBox.resx">
+      <DependentUpon>NameInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NameInputBox.zh-CHS.resx">
+      <DependentUpon>NameInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NameInputBox.zh-CHT.resx">
+      <DependentUpon>NameInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NameValueInputBox.resx">
+      <DependentUpon>NameValueInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NameValueInputBox.zh-CHS.resx">
+      <DependentUpon>NameValueInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\NameValueInputBox.zh-CHT.resx">
+      <DependentUpon>NameValueInputBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ReplaceBox.zh-CHS.resx">
       <DependentUpon>ReplaceBox.cs</DependentUpon>
     </EmbeddedResource>
@@ -211,6 +305,16 @@
     <EmbeddedResource Include="Controls\SearchOptionsForm.zh-CHT.resx">
       <DependentUpon>SearchOptionsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\SoundInputBox.resx">
+      <DependentUpon>SoundInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\SoundInputBox.zh-CHS.resx">
+      <DependentUpon>SoundInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\SoundInputBox.zh-CHT.resx">
+      <DependentUpon>SoundInputBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\SoundPlayer.zh-CHS.resx">
       <DependentUpon>SoundPlayer.cs</DependentUpon>
     </EmbeddedResource>
@@ -219,6 +323,16 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\TreeViewMS.resx">
       <DependentUpon>TreeViewMS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\VectorInputBox.resx">
+      <DependentUpon>VectorInputBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\VectorInputBox.zh-CHS.resx">
+      <DependentUpon>VectorInputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\VectorInputBox.zh-CHT.resx">
+      <DependentUpon>VectorInputBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.ja.resx" />
     <EmbeddedResource Include="Properties\Resources.ko.resx" />
