--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -218,6 +218,13 @@
     <Compile Include="GUI\OptionsForm.Designer.cs">
       <DependentUpon>OptionsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\WzStringSearchForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\WzStringSearchForm.Designer.cs">
+      <DependentUpon>WzStringSearchForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\WzStringSearchFormDataCache.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GUI\SaveForm.cs">
@@ -343,6 +350,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\SaveForm.zh-CHT.resx">
       <DependentUpon>SaveForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\WzStringSearchForm.resx">
+      <DependentUpon>WzStringSearchForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.ja.resx" />
     <EmbeddedResource Include="Properties\Resources.ko.resx" />
