--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -225,6 +225,12 @@
       <DependentUpon>WzStringSearchForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\WzStringSearchFormDataCache.cs" />
+    <Compile Include="GUI\ZLZPacketEncryptionKeyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ZLZPacketEncryptionKeyForm.designer.cs">
+      <DependentUpon>ZLZPacketEncryptionKeyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GUI\SaveForm.cs">
@@ -353,6 +359,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\WzStringSearchForm.resx">
       <DependentUpon>WzStringSearchForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ZLZPacketEncryptionKeyForm.resx">
+      <DependentUpon>ZLZPacketEncryptionKeyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.ja.resx" />
     <EmbeddedResource Include="Properties\Resources.ko.resx" />
