--- a/HaRepacker/packages.config
+++ b/HaRepacker/packages.config
@@ -5,5 +5,6 @@
   <package id="ILMerge" version="2.14.1208" targetFramework="net47" />
   <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net47" />
   <package id="NAudio" version="1.8.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="WeifenLuo.WinFormsUI.Docking" version="2.1.0" targetFramework="net461" />
 </packages>
