Sort WZ nodes by numeric order

--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -152,6 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimationBuilder.cs" />
+    <Compile Include="Comparer\TreeViewNodeSorter.cs" />
+    <Compile Include="Comparer\SemiNumericComparer.cs" />
     <Compile Include="Configuration\ConfigurationManager.cs" />
     <Compile Include="ContextMenuManager.cs" />
     <Compile Include="FHMapper\FHMapper.cs" />
